--- a/app/views/refinery/blog/admin/posts/_form.html.erb
+++ b/app/views/refinery/blog/admin/posts/_form.html.erb
@@ -44,7 +44,7 @@
       <%= f.text_field :tag_list, :class => 'larger' -%>
     </div>
 <!-- Checkbox for facebook post............................................. -->   
-    <div id='auto_fbpost_field'>
+    <div id='auto_fbpost_field' class='field'>
  
       <% if (f.object.facebook_posted) %>
           Already Posted in facebook 
